src/antlr/PortalToolboxLanguageParser.js
// Generated from PortalToolboxLanguage.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import PortalToolboxLanguageListener from './PortalToolboxLanguageListener.js';
import PortalToolboxLanguageVisitor from './PortalToolboxLanguageVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class PortalToolboxLanguageParser extends antlr4.Parser {

    static grammarFileName = "PortalToolboxLanguage.g4";
    static literalNames = [ null, "'{'", "';'", "'}'", "'('", "')'", "':'", 
                            "','", "'.'", "'='", "'['", "']'", "'!'", "'-'", 
                            "'as'", "'*'", "'/'", "'+'", "'<'", "'<='", 
                            "'>='", "'>'", "'=='", "'!='", "'&&'", "'||'", 
                            "'?'", "'|'", "'actions'", "'async'", "'await'", 
                            "'by'", "'break'", "'conditions'", "'condition'", 
                            "'continue'", "'else'", "'for'", "'from'", "'global'", 
                            "'if'", "'mod'", "'on'", "'player'", "'return'", 
                            "'rule'", "'sub'", "'team'", "'to'", "'var'", 
                            "'while'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, "ACTIONS", "ASYNC", 
                             "AWAIT", "BY", "BREAK", "CONDITIONS", "CONDITION", 
                             "CONTINUE", "ELSE", "FOR", "FROM", "GLOBAL", 
                             "IF", "MOD", "ON", "PLAYER", "RETURN", "RULE", 
                             "SUB", "TEAM", "TO", "VAR", "WHILE", "BOOLEAN_LITERAL", 
                             "NUMBER_LITERAL", "STRING_LITERAL", "BACKTICK_IDENTIFIER", 
                             "IDENTIFIER", "MULTILINE_COMMENT", "COMMENT", 
                             "WS", "UNKNWON" ];
    static ruleNames = [ "code", "modDefinition", "ruleDefinition", "subroutineDefinition", 
                         "argumentsDeclaration", "argumentDeclaration", 
                         "body", "bodyConditions", "bodyCondition", "bodyActions", 
                         "statement", "variableDeclaration", "variableDeclarationWithoutSpecifier", 
                         "expression", "callArguments", "typeExpression", 
                         "identifier", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = PortalToolboxLanguageParser.ruleNames;
        this.literalNames = PortalToolboxLanguageParser.literalNames;
        this.symbolicNames = PortalToolboxLanguageParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 13:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 15:
    	    		return this.typeExpression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 10);
    		case 1:
    			return this.precpred(this._ctx, 9);
    		case 2:
    			return this.precpred(this._ctx, 8);
    		case 3:
    			return this.precpred(this._ctx, 7);
    		case 4:
    			return this.precpred(this._ctx, 6);
    		case 5:
    			return this.precpred(this._ctx, 5);
    		case 6:
    			return this.precpred(this._ctx, 4);
    		case 7:
    			return this.precpred(this._ctx, 16);
    		case 8:
    			return this.precpred(this._ctx, 15);
    		case 9:
    			return this.precpred(this._ctx, 14);
    		case 10:
    			return this.precpred(this._ctx, 11);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    typeExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 11:
    			return this.precpred(this._ctx, 7);
    		case 12:
    			return this.precpred(this._ctx, 8);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	code() {
	    let localctx = new CodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, PortalToolboxLanguageParser.RULE_code);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (PortalToolboxLanguageParser.ASYNC - 29)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 29)) | (1 << (PortalToolboxLanguageParser.MOD - 29)) | (1 << (PortalToolboxLanguageParser.PLAYER - 29)) | (1 << (PortalToolboxLanguageParser.RULE - 29)) | (1 << (PortalToolboxLanguageParser.SUB - 29)) | (1 << (PortalToolboxLanguageParser.TEAM - 29)) | (1 << (PortalToolboxLanguageParser.VAR - 29)))) !== 0)) {
	            this.state = 40;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 36;
	                this.variableDeclaration();
	                break;

	            case 2:
	                this.state = 37;
	                this.subroutineDefinition();
	                break;

	            case 3:
	                this.state = 38;
	                this.ruleDefinition();
	                break;

	            case 4:
	                this.state = 39;
	                this.modDefinition();
	                break;

	            }
	            this.state = 44;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 45;
	        this.match(PortalToolboxLanguageParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	modDefinition() {
	    let localctx = new ModDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, PortalToolboxLanguageParser.RULE_modDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this.match(PortalToolboxLanguageParser.MOD);
	        this.state = 49;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 28)) & ~0x1f) == 0 && ((1 << (_la - 28)) & ((1 << (PortalToolboxLanguageParser.ACTIONS - 28)) | (1 << (PortalToolboxLanguageParser.ASYNC - 28)) | (1 << (PortalToolboxLanguageParser.AWAIT - 28)) | (1 << (PortalToolboxLanguageParser.BY - 28)) | (1 << (PortalToolboxLanguageParser.BREAK - 28)) | (1 << (PortalToolboxLanguageParser.CONDITIONS - 28)) | (1 << (PortalToolboxLanguageParser.CONDITION - 28)) | (1 << (PortalToolboxLanguageParser.CONTINUE - 28)) | (1 << (PortalToolboxLanguageParser.FROM - 28)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 28)) | (1 << (PortalToolboxLanguageParser.MOD - 28)) | (1 << (PortalToolboxLanguageParser.ON - 28)) | (1 << (PortalToolboxLanguageParser.PLAYER - 28)) | (1 << (PortalToolboxLanguageParser.RULE - 28)) | (1 << (PortalToolboxLanguageParser.SUB - 28)) | (1 << (PortalToolboxLanguageParser.TEAM - 28)) | (1 << (PortalToolboxLanguageParser.TO - 28)) | (1 << (PortalToolboxLanguageParser.VAR - 28)) | (1 << (PortalToolboxLanguageParser.BACKTICK_IDENTIFIER - 28)) | (1 << (PortalToolboxLanguageParser.IDENTIFIER - 28)))) !== 0)) {
	            this.state = 48;
	            localctx.modIdentifier = this.identifier();
	        }

	        this.state = 51;
	        this.match(PortalToolboxLanguageParser.T__0);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 28)) & ~0x1f) == 0 && ((1 << (_la - 28)) & ((1 << (PortalToolboxLanguageParser.ACTIONS - 28)) | (1 << (PortalToolboxLanguageParser.ASYNC - 28)) | (1 << (PortalToolboxLanguageParser.AWAIT - 28)) | (1 << (PortalToolboxLanguageParser.BY - 28)) | (1 << (PortalToolboxLanguageParser.BREAK - 28)) | (1 << (PortalToolboxLanguageParser.CONDITIONS - 28)) | (1 << (PortalToolboxLanguageParser.CONDITION - 28)) | (1 << (PortalToolboxLanguageParser.CONTINUE - 28)) | (1 << (PortalToolboxLanguageParser.FROM - 28)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 28)) | (1 << (PortalToolboxLanguageParser.MOD - 28)) | (1 << (PortalToolboxLanguageParser.ON - 28)) | (1 << (PortalToolboxLanguageParser.PLAYER - 28)) | (1 << (PortalToolboxLanguageParser.RULE - 28)) | (1 << (PortalToolboxLanguageParser.SUB - 28)) | (1 << (PortalToolboxLanguageParser.TEAM - 28)) | (1 << (PortalToolboxLanguageParser.TO - 28)) | (1 << (PortalToolboxLanguageParser.VAR - 28)) | (1 << (PortalToolboxLanguageParser.BACKTICK_IDENTIFIER - 28)) | (1 << (PortalToolboxLanguageParser.IDENTIFIER - 28)))) !== 0)) {
	            this.state = 57;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 52;
	                localctx._identifier = this.identifier();
	                localctx.ruleIdentifier.push(localctx._identifier);
	                this.state = 54;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===PortalToolboxLanguageParser.T__1) {
	                    this.state = 53;
	                    this.match(PortalToolboxLanguageParser.T__1);
	                }

	                break;

	            case 2:
	                this.state = 56;
	                this.ruleDefinition();
	                break;

	            }
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 62;
	        this.match(PortalToolboxLanguageParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ruleDefinition() {
	    let localctx = new RuleDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, PortalToolboxLanguageParser.RULE_ruleDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.MOD) {
	            this.state = 64;
	            this.match(PortalToolboxLanguageParser.MOD);
	        }

	        this.state = 68;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.ASYNC) {
	            this.state = 67;
	            this.match(PortalToolboxLanguageParser.ASYNC);
	        }

	        this.state = 70;
	        this.match(PortalToolboxLanguageParser.RULE);
	        this.state = 72;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        if(la_===1) {
	            this.state = 71;
	            localctx.ruleIdentifier = this.identifier();

	        }
	        this.state = 74;
	        this.match(PortalToolboxLanguageParser.ON);
	        this.state = 75;
	        localctx.event = this.identifier();
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.T__3) {
	            this.state = 76;
	            this.match(PortalToolboxLanguageParser.T__3);
	            this.state = 77;
	            localctx.eventArgument = this.identifier();
	            this.state = 78;
	            this.match(PortalToolboxLanguageParser.T__4);
	        }

	        this.state = 82;
	        this.body();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	subroutineDefinition() {
	    let localctx = new SubroutineDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, PortalToolboxLanguageParser.RULE_subroutineDefinition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.ASYNC) {
	            this.state = 84;
	            this.match(PortalToolboxLanguageParser.ASYNC);
	        }

	        this.state = 87;
	        this.match(PortalToolboxLanguageParser.SUB);
	        this.state = 88;
	        this.identifier();
	        this.state = 90;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.T__3) {
	            this.state = 89;
	            this.argumentsDeclaration();
	        }

	        this.state = 94;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.T__5) {
	            this.state = 92;
	            this.match(PortalToolboxLanguageParser.T__5);
	            this.state = 93;
	            this.typeExpression(0);
	        }

	        this.state = 96;
	        this.body();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentsDeclaration() {
	    let localctx = new ArgumentsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, PortalToolboxLanguageParser.RULE_argumentsDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 98;
	        this.match(PortalToolboxLanguageParser.T__3);
	        this.state = 107;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 28)) & ~0x1f) == 0 && ((1 << (_la - 28)) & ((1 << (PortalToolboxLanguageParser.ACTIONS - 28)) | (1 << (PortalToolboxLanguageParser.ASYNC - 28)) | (1 << (PortalToolboxLanguageParser.AWAIT - 28)) | (1 << (PortalToolboxLanguageParser.BY - 28)) | (1 << (PortalToolboxLanguageParser.BREAK - 28)) | (1 << (PortalToolboxLanguageParser.CONDITIONS - 28)) | (1 << (PortalToolboxLanguageParser.CONDITION - 28)) | (1 << (PortalToolboxLanguageParser.CONTINUE - 28)) | (1 << (PortalToolboxLanguageParser.FROM - 28)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 28)) | (1 << (PortalToolboxLanguageParser.MOD - 28)) | (1 << (PortalToolboxLanguageParser.ON - 28)) | (1 << (PortalToolboxLanguageParser.PLAYER - 28)) | (1 << (PortalToolboxLanguageParser.RULE - 28)) | (1 << (PortalToolboxLanguageParser.SUB - 28)) | (1 << (PortalToolboxLanguageParser.TEAM - 28)) | (1 << (PortalToolboxLanguageParser.TO - 28)) | (1 << (PortalToolboxLanguageParser.VAR - 28)) | (1 << (PortalToolboxLanguageParser.BACKTICK_IDENTIFIER - 28)) | (1 << (PortalToolboxLanguageParser.IDENTIFIER - 28)))) !== 0)) {
	            this.state = 99;
	            this.argumentDeclaration();
	            this.state = 104;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===PortalToolboxLanguageParser.T__6) {
	                this.state = 100;
	                this.match(PortalToolboxLanguageParser.T__6);
	                this.state = 101;
	                this.argumentDeclaration();
	                this.state = 106;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 109;
	        this.match(PortalToolboxLanguageParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentDeclaration() {
	    let localctx = new ArgumentDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, PortalToolboxLanguageParser.RULE_argumentDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.identifier();
	        this.state = 114;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.T__5) {
	            this.state = 112;
	            this.match(PortalToolboxLanguageParser.T__5);
	            this.state = 113;
	            this.typeExpression(0);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	body() {
	    let localctx = new BodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, PortalToolboxLanguageParser.RULE_body);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(PortalToolboxLanguageParser.T__0);
	        this.state = 122;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 120;
	                this._errHandler.sync(this);
	                switch(this._input.LA(1)) {
	                case PortalToolboxLanguageParser.CONDITIONS:
	                    this.state = 117;
	                    this.bodyConditions();
	                    break;
	                case PortalToolboxLanguageParser.CONDITION:
	                    this.state = 118;
	                    this.bodyCondition();
	                    break;
	                case PortalToolboxLanguageParser.ACTIONS:
	                    this.state = 119;
	                    this.bodyActions();
	                    break;
	                default:
	                    throw new antlr4.error.NoViableAltException(this);
	                } 
	            }
	            this.state = 124;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PortalToolboxLanguageParser.T__0) | (1 << PortalToolboxLanguageParser.T__3) | (1 << PortalToolboxLanguageParser.T__9) | (1 << PortalToolboxLanguageParser.T__11) | (1 << PortalToolboxLanguageParser.T__12) | (1 << PortalToolboxLanguageParser.ACTIONS) | (1 << PortalToolboxLanguageParser.ASYNC) | (1 << PortalToolboxLanguageParser.AWAIT) | (1 << PortalToolboxLanguageParser.BY))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (PortalToolboxLanguageParser.BREAK - 32)) | (1 << (PortalToolboxLanguageParser.CONDITIONS - 32)) | (1 << (PortalToolboxLanguageParser.CONDITION - 32)) | (1 << (PortalToolboxLanguageParser.CONTINUE - 32)) | (1 << (PortalToolboxLanguageParser.FOR - 32)) | (1 << (PortalToolboxLanguageParser.FROM - 32)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 32)) | (1 << (PortalToolboxLanguageParser.IF - 32)) | (1 << (PortalToolboxLanguageParser.MOD - 32)) | (1 << (PortalToolboxLanguageParser.ON - 32)) | (1 << (PortalToolboxLanguageParser.PLAYER - 32)) | (1 << (PortalToolboxLanguageParser.RETURN - 32)) | (1 << (PortalToolboxLanguageParser.RULE - 32)) | (1 << (PortalToolboxLanguageParser.SUB - 32)) | (1 << (PortalToolboxLanguageParser.TEAM - 32)) | (1 << (PortalToolboxLanguageParser.TO - 32)) | (1 << (PortalToolboxLanguageParser.VAR - 32)) | (1 << (PortalToolboxLanguageParser.WHILE - 32)) | (1 << (PortalToolboxLanguageParser.BOOLEAN_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.NUMBER_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.STRING_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.BACKTICK_IDENTIFIER - 32)) | (1 << (PortalToolboxLanguageParser.IDENTIFIER - 32)))) !== 0)) {
	            this.state = 125;
	            this.statement();
	            this.state = 130;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 131;
	        this.match(PortalToolboxLanguageParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bodyConditions() {
	    let localctx = new BodyConditionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, PortalToolboxLanguageParser.RULE_bodyConditions);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(PortalToolboxLanguageParser.CONDITIONS);
	        this.state = 134;
	        this.match(PortalToolboxLanguageParser.T__0);
	        this.state = 141;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PortalToolboxLanguageParser.T__3) | (1 << PortalToolboxLanguageParser.T__9) | (1 << PortalToolboxLanguageParser.T__11) | (1 << PortalToolboxLanguageParser.T__12) | (1 << PortalToolboxLanguageParser.ACTIONS) | (1 << PortalToolboxLanguageParser.ASYNC) | (1 << PortalToolboxLanguageParser.AWAIT) | (1 << PortalToolboxLanguageParser.BY))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (PortalToolboxLanguageParser.BREAK - 32)) | (1 << (PortalToolboxLanguageParser.CONDITIONS - 32)) | (1 << (PortalToolboxLanguageParser.CONDITION - 32)) | (1 << (PortalToolboxLanguageParser.CONTINUE - 32)) | (1 << (PortalToolboxLanguageParser.FROM - 32)) | (1 << (PortalToolboxLanguageParser.GLOBAL - 32)) | (1 << (PortalToolboxLanguageParser.MOD - 32)) | (1 << (PortalToolboxLanguageParser.ON - 32)) | (1 << (PortalToolboxLanguageParser.PLAYER - 32)) | (1 << (PortalToolboxLanguageParser.RULE - 32)) | (1 << (PortalToolboxLanguageParser.SUB - 32)) | (1 << (PortalToolboxLanguageParser.TEAM - 32)) | (1 << (PortalToolboxLanguageParser.TO - 32)) | (1 << (PortalToolboxLanguageParser.VAR - 32)) | (1 << (PortalToolboxLanguageParser.BOOLEAN_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.NUMBER_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.STRING_LITERAL - 32)) | (1 << (PortalToolboxLanguageParser.BACKTICK_IDENTIFIER - 32)) | (1 << (PortalToolboxLanguageParser.IDENTIFIER - 32)))) !== 0)) {
	            this.state = 135;
	            this.expression(0);
	            this.state = 137;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===PortalToolboxLanguageParser.T__1) {
	                this.state = 136;
	                this.match(PortalToolboxLanguageParser.T__1);
	            }

	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 144;
	        this.match(PortalToolboxLanguageParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bodyCondition() {
	    let localctx = new BodyConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, PortalToolboxLanguageParser.RULE_bodyCondition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(PortalToolboxLanguageParser.CONDITION);
	        this.state = 147;
	        this.expression(0);
	        this.state = 149;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===PortalToolboxLanguageParser.T__1) {
	            this.state = 148;
	            this.match(PortalToolboxLanguageParser.T__1);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


